--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -23,12 +23,22 @@ body {
 
 pre code {
   display: block;
-  margin: 20px 0;
-  padding: 0.5em;
-  border-left: 7px solid #5b82d8;
+  margin: 20px 0 8px 0;
+  padding: 0.3em;
+  border-left: 6px solid #5b82d8;
+  /* border-left: 6px solid #7d9ee6; */
   font-family: "SFMono-Regular",source-code-pro,Menlo,Monaco,Consolas,"Roboto Mono","Droid Sans Mono","Liberation Mono",Consolas,"Courier New",Courier,monospace;
   font-size: 13px;
   overflow-x: auto;
+  background-color: #f5f5f5;
+}
+
+pre {
+  margin-bottom: 4px;
+}
+
+.hljs {
+  background-color: #f6f5f6;
 }
 
 /* code {
@@ -49,13 +59,22 @@ code {
 
 pre.output {
   display: block;
-  margin: 5px 0;
-  border-radius: .3em;
+  margin: 0 4px 10px 4px;
+  /* border-radius: .3em; */
+  /* background-color: #f6f5f6; */
   padding: .5rem 1.5rem;
-  border-left: 8px solid #dadbdc;
+  /* border-left: 5px solid #dadbdc; */
+  border-left: 3px #ddd;
+  border-right: 3px #ddd;
+  border-left-style: dotted;
+  border-right-style: dotted;
   font-family: "SFMono-Regular",source-code-pro,Menlo,Monaco,Consolas,"Roboto Mono","Droid Sans Mono","Liberation Mono",Consolas,"Courier New",Courier,monospace;
   font-size: 13px;
   overflow-x: auto;
+}
+
+pre.output.small {
+  font-size: 11px;
 }
 
 pre.plain {
@@ -69,7 +88,7 @@ pre.plain {
 
 pre.syntax {
   display: block;
-  padding: .5rem 1.5rem;
+  padding: .75rem 1.5rem;
   background-color: #eaf1fb;
   font-family: "SFMono-Regular",source-code-pro,Menlo,Monaco,Consolas,"Roboto Mono","Droid Sans Mono","Liberation Mono",Consolas,"Courier New",Courier,monospace;
   font-size: 18px;
