Edits to bundle design docs.

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -25,7 +25,7 @@ pre code {
   display: block;
   margin: 20px 0 8px 0;
   padding: 0.3em;
-  border-left: 5px solid #5d91df;
+  border-left: 3px solid #2c5fac;
   font-family: "SFMono-Regular",source-code-pro,Menlo,Monaco,Consolas,"Roboto Mono","Droid Sans Mono","Liberation Mono",Consolas,"Courier New",Courier,monospace;
   font-size: 13px;
   overflow-x: auto;
