--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -10,6 +10,12 @@ body {
   .docMainWrapper > * {
     margin: 0 14px;
   }
+  .separateOnPageNav .docsNavContainer {
+    flex: 0 0 200px;
+  }
+  .onPageNav {
+    flex: 0 0 200px;
+  }
 }
 
 @media only screen and (max-width: 1023px) {
@@ -23,9 +29,9 @@ body {
 
 pre code {
   display: block;
-  margin: 20px 0 8px 0;
-  padding: 0.3em;
-  border-left: 3px solid #2c5fac;
+  margin: 20px 0 8px 4px;
+  padding: 1em;
+  /* border-left: 4px solid #8192a5; */
   font-family: "SFMono-Regular",source-code-pro,Menlo,Monaco,Consolas,"Roboto Mono","Droid Sans Mono","Liberation Mono",Consolas,"Courier New",Courier,monospace;
   font-size: 13px;
   overflow-x: auto;
@@ -36,7 +42,7 @@ pre {
 }
 
 code.hljs {
-  background-color: #f9f9f9;
+  background-color: #f0f1f3;
 }
 
 code {
@@ -47,10 +53,10 @@ code {
 
 pre.output {
   display: block;
-  margin: 0 7px 10px 7px;
+  margin: 0 7px 10px 5px;
   padding: 1rem 1.5rem;
-  border-left: 3px dotted #dedede;
-  border-right: 3px dotted #dedede;
+  border-left: 2px dashed #dddcdc;
+  border-right: 2px dashed #dddcdc;
 
   color: black;
   /* background-color: #f9f9f9; */
@@ -58,12 +64,12 @@ pre.output {
   font-family: "SFMono-Regular",source-code-pro,Menlo,Monaco,Consolas,"Roboto Mono","Droid Sans Mono","Liberation Mono",Consolas,"Courier New",Courier,monospace;
   font-size: 13px;
   overflow-x: auto;
-  /* box-shadow: -4px 4px #dedede; */
+  /* box-shadow: 4px 4px #dedede; */
   /* box-shadow: 0px 5px #efefef; */
 }
 
 pre.output.small {
-  font-size: 11px;
+  font-size: 10px;
 }
 
 pre.plain {
