--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -27,6 +27,10 @@ body {
 @media only screen and (min-width: 1500px) {
 }
 
+.imageAlignTop .blockImage {
+  max-width: 100%;
+}
+
 code {
   font-size: 14px;
   background-color: white;
