Make active nav link more visible

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -28,6 +28,11 @@ body {
   max-width: 100%;
 }
 
+.toc .toggleNav ul li.navListItemActive a {
+  color: darkblue;
+  font-weight: bold;
+}
+
 code {
   font-size: 14px;
   background-color: white;
